2009-12-11  Eli Zaretskii  <eliz@gnu.org>

	* job.c (construct_command_argv_internal) <sh_cmds_dos>
	[WINDOWS32]: Add "echo." and a few more commands that are built
	into cmd.exe.  Fixes Savannah bug #28126.

	* file.c (lookup_file) [HAVE_DOS_PATHS]: Treat '\\' like we do
	with '/'.

2009-11-15  Paul Smith  <psmith@gnu.org>

	Patches for VMS provided by Hartmut Becker <Hartmut.Becker@hp.com>

	* vmsjobs.c (ctrlYPressed) [VMS]: Deal with CTRL-Y.
	(vmsHandleChildTerm) [VMS]: Ditto.
	(astYHandler) [VMS]: Ditto.
	(tryToSetupYAst) [VMS]: Ditto.
	(child_execute_job) [VMS]: Ditto.

	* vmsify.c (trnlog) [VMS]: Fix const errors.
	(vmsify) [VMS]: Ditto.

	* readme.vms [VMS]: Update with notes for 3.82.

	* job.h (comname) [VMS]: Remember the temporary command filename

	* dir.c (vmsify) [VMS]: Fix const errors.
	(vms_hash) [VMS]: Ditto.
	(vmsstat_dir) [VMS]: Ditto.
	(find_directory) [VMS]: Fix case-insensitive option for VMS
	(dir_contents_file_exists_p) [VMS]: Ditto.
	(file_impossible) [VMS]: Ditto.

	* config.h-vms.template (HAVE_FDOPEN) [VMS]: Have it.
	(HAVE_STRCASECMP) [VMS]: Ditto.

	* arscan.c (VMS_get_member_info) [VMS]: Fix timezone computation.
	(ar_scan) [VMS]: Fix const error.

2009-11-12  Boris Kolpackov  <boris@codesynthesis.com>

	* vpath.c (vpath_search, selective_vpath_search): Add index arguments
	which allows the caller to get the index of the matching directory.

	* make.h (vpath_search): Update prototype.

	* remake.c (library_search): Implement linker-compatible library
	search. Use the new VPATH_SEARCH index functionality to keep track
	of the directory index for each match. Select the match with the
	lowest directory index.

	* implicit.c (pattern_search): Pass NULL for the index arguments in
	the VPATH_SEARCH call.

	* doc/make.texi (Directory Search for Link Libraries): Describe the
	new search behavior.

	* NEWS: Add a note about the new behavior.

2009-10-25  Paul Smith  <psmith@gnu.org>

	* AUTHORS, et.al.: Update copyright years.
